--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3372,6 +3372,62 @@ Uncertainties based on
   year          = {2014}
 }
 
+@article{Aad:2013wta,
+      author         = "Aad, Georges and others",
+      title          = "{Search for new phenomena in final states with large jet
+                        multiplicities and missing transverse momentum at
+                        sqrt(s)=8 TeV proton-proton collisions using the ATLAS
+                        experiment}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "JHEP",
+      volume         = "1310",
+      pages          = "130",
+      doi            = "10.1007/JHEP10(2013)130",
+      year           = "2013",
+      eprint         = "1308.1841",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-110",
+      SLACcitation   = "%%CITATION = ARXIV:1308.1841;%%",
+}
+
+@article{Aad:2014lra,
+      author         = "Aad, Georges and others",
+      title          = "{Search for strong production of supersymmetric particles
+                        in final states with missing transverse momentum and at
+                        least three $b$-jets at $\sqrt{s} =$ 8 TeV proton-proton
+                        collisions with the ATLAS detector}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "JHEP",
+      volume         = "1410",
+      pages          = "24",
+      doi            = "10.1007/JHEP10(2014)024",
+      year           = "2014",
+      eprint         = "1407.0600",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-110",
+      SLACcitation   = "%%CITATION = ARXIV:1407.0600;%%",
+}
+
+@article{Aad:2014wea,
+      author         = "Aad, Georges and others",
+      title          = "{Search for squarks and gluinos with the ATLAS detector
+                        in final states with jets and missing transverse momentum
+                        using $\sqrt{s}=8$ TeV proton--proton collision data}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "JHEP",
+      volume         = "1409",
+      pages          = "176",
+      doi            = "10.1007/JHEP09(2014)176",
+      year           = "2014",
+      eprint         = "1405.7875",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-093",
+      SLACcitation   = "%%CITATION = ARXIV:1405.7875;%%",
+}
+
 @article{PhysRevLett.101.221803,
   volume = {101},
   journal = {Phys. Rev. Lett.},
@@ -5287,6 +5343,43 @@ keywords = "Confidence level computation Poisson statistical"
       year           = {2012}
 }
 
+@techreport{CMS-PAS-SUS-13-020,
+      title         = "{Phenomenological MSSM interpretation of the CMS 7 and 8
+                       TeV results}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-SUS-13-020",
+      year          = "2014",
+}
+
+@article{Djouadi:1998di,
+      author         = "Djouadi, A. and others",
+      title          = "{The Minimal supersymmetric standard model: Group summary
+                        report}",
+      collaboration  = "MSSM Working Group",
+      year           = "1998",
+      eprint         = "hep-ph/9901246",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "PM-98-45",
+      SLACcitation   = "%%CITATION = HEP-PH/9901246;%%",
+}
+
+@article{robert2001bayesian,
+  title={The Bayesian Choice: From Decision-Theoretic Foundations to Computational Implementation (Springer Texts in Statistics) by},
+  author={Robert, Christian P},
+  year={2001},
+  publisher={Springer-Verlag New York}
+}
+
+@book{o2004bayesian,
+  title={Bayesian inference},
+  author={O'Hagan, Anthony and Forster, Jonathan and Kendall, Maurice G},
+  year={2004},
+  publisher={Arnold London}
+}
+
 @book{bib:NumRec,
   Author = {William H. Press and Saul A. Teukolsky and William T. Vetterling and Brian P. Flannery},
   Title = {Numerical Recipes: The Art of Scientific Computing},
@@ -5367,9 +5460,27 @@ archivePrefix  = "arXiv",
   collaboration = {ATLAS},
   title         = {ATLAS Supersymmetry (SUSY) searches},
   journal       = {ATLAS Wiki},
-  note          = {https://twiki.cern.ch/twiki/bin/view/AtlasPublic/SupersymmetryPublicResults, Topic revision: r204},
+  note          = {https://twiki.cern.ch/twiki/bin/view/AtlasPublic/SupersymmetryPublicResults, Topic revision: r437},
   url           = {https://twiki.cern.ch/twiki/bin/view/AtlasPublic/SupersymmetryPublicResults},
-  year          = {2012}
+  year          = {2014}
+}
+
+@article{Buchmueller:2013rsa,
+      author         = "Buchmueller, O. and Cavanaugh, R. and De Roeck, A. and
+                        Dolan, M.J. and Ellis, J.R. and others",
+      title          = "{The CMSSM and NUHM1 after LHC Run 1}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C74",
+      pages          = "2922",
+      doi            = "10.1140/epjc/s10052-014-2922-3",
+      year           = "2014",
+      eprint         = "1312.5250",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "KCL-PH-TH-2013-42, LCTS-2013-29, CERN-PH-TH-2013-297,
+                        DESY-13-250, FTPI-MINN-13-43, UMN-TH-3316-13,
+                        SLAC-PUB-15861, FERMILAB-PUB-13-668-T",
+      SLACcitation   = "%%CITATION = ARXIV:1312.5250;%%",
 }
 
 @article{PhysRevLett.96.122001,
