--- a/RA2.tex
+++ b/RA2.tex
@@ -290,7 +290,7 @@ As stated above, QCD background contributions arise from jet mismeasurements in 
   \begin{tabular}{c}
                 \includegraphics[width=0.99\textwidth]{figures/SketchJetSmearingMethod_LabelMHT.pdf}  
   \end{tabular}}
-  \caption{Outline of the two steps performed in the R+S method for estimation of QCD background events~\cite{MSchrode}.}
+  \caption{Outline of the two steps performed in the R+S method for estimation of QCD background events. Sketch provided by~\cite{MSchrode}.}
   \label{fig:RPlusS_concept}
 \end{figure}
 \begin{description}
@@ -748,7 +748,7 @@ Similar studies targeting the same simplified models have been performed within 
 \\
 Comparable analyses have also been performed by the ATLAS experiment~\cite{Aad:2014wea, Aad:2013wta, Aad:2014lra} and the obtained exclusion limits on sparticle masses lie in a very similar mass region.
 
-\section{Status of natural supersymmetry after LHC Run-I}
+\section{Status of natural supersymmetry after LHC Run I}
 \label{sec:susy_status}
 In general, the SUSY search presented in this thesis as well as other measurements, as discussed in Sec.~\ref{subsec:RA2_comp}, pushed the mass limits of supersymmetric particles even closer to the TeV range than the 7\tev analyses or even beyond. However, most of the interpretations are in fact presented in simplified models assuming 100\% branching fraction of that specific decay. This is something which most probably is not realised in nature. Scaling the respective branching ratios down, typically results in much weaker mass limits. \\
 Nonetheless, it is also interesting to look at more realistic SUSY models, like \eg the CMSSM again. In addition, to direct interpretations of searches in the CMSSM which, \eg in case of the ATLAS experiment, result in exclusions of $m_{1/2} \lesssim 800$\gev for $m_{0} \lesssim 1$\tev and $m_{1/2} \lesssim 600$\gev for $m_{0} \lesssim 6$\tev ($\mathrm{tan} \, \beta = 30$, $A_0 = -2m_0$, $\mu >0$)~\cite{bib:ATLAS:PhysicsResultsSUS}, also global fits to constrain SUSY parameters are performed (\cf for instance~\cite{Bechtle:2012zk, Buchmueller:2013rsa}). Typically, these take not only direct searches from the LHC, but also constraints from low-energy precision observables, flavour measurements or the cosmological cold dark matter density into account to constrain for instance the CMSSM. In general it turns out, that there is a growing tension between low-energy observables, the non-observation of SUSY at the LHC and the CMSSM, such best fit values are pushed up to larger and larger values of $m_0/m_{1/2}$. \\
