--- a/Theory.tex
+++ b/Theory.tex
@@ -7,7 +7,7 @@ The SM comprises the elementary particles and their interactions~\cite{bib:PDG:2
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{c}
-    \includegraphics[width=0.85\textwidth]{figures/SM.jpg}
+    \includegraphics[width=0.9\textwidth]{figures/SM.jpg}
   \end{tabular}
   \caption{Overview of particles contained in the standard model. Blue lines indicate interactions between different particles.}
   \label{fig:SM}
@@ -32,7 +32,7 @@ In addition to the attributes described above, fermions are furthermore characte
 Matter particles interact with each other through fundamental forces mediated via gauge bosons. These bosons arise from the principle of local gauge invariance under symmetry transformations. 
  \begin{description}
   \item \textit{Electromagnetic Force:} The description of the electromagnetic force is based on the theory of \textit{Quantum Electrodynamics} (QED). It is exchanged between electrically charged particles, like the charged leptons and quarks, by the exchange of photons. These are massless and electrically neutral resulting in the property that the electromagnetic force is long ranged.
-  \item \textit{Weak Force:} The weak force acts on the weak charge which is carried by all fermions in the SM. It is mediated by three vector bosons -- namely the two charged \Wpm bosons and the neutral \Z boson. These bosons are unlike the photon massive with masses of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result, the weak interaction is suppressed with respect to the electromagnetic force. \\
+  \item \textit{Weak Force:} The weak force acts on the weak charge which is carried by all fermions in the SM. It is mediated by three vector bosons -- namely the two charged \Wpm bosons and the neutral \Z boson. These bosons are unlike the photon massive with masses\footnote{In this thesis, natural units are used with $\hbar = c =1$. Thus, also particle masses and momenta have the dimension of energies.} of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result, the weak interaction is suppressed with respect to the electromagnetic force. \\
 Weak interactions preferably take place within one generation, \eg \lel or \lmu transform into the respective neutrinos when emitting a \Wm. However, since the mass eigenstates in the weak interaction differ from the flavour eigenstates, \Wpm bosons can also couple to fermions between different generations. In the quark-sector typically a representation is chosen where the up-type flavour eigenstates correspond to the mass eigenstates and the down-type quarks mix. This mixing is described by the CKM-matrix ~\cite{PhysRevLett.10.531, PTP.49.652}. This is a unitary matrix, described by three mixing angles and one CP-violating phase, which indicates the relative strength between individual transitions. Similarly, also in the neutrino sector a mixing between the weak and the mass eigenstates occurs which is known as \textit{neutrino oscillation}~\cite{Maki:1962mu, Pontecorvo:1967fh, Fukuda:1998mi}.
   \item \textit{Strong Force:} The theoretical framework describing the strong force is called Quantum Chromodynamics (QCD). It is mediated via eight massless gluons and acts on the colour charge which is carried for instance by quarks. In contrast to the photon, which is electrically neutral and thus can not interact with itself, gluons carry a colour charge and hence couple to themselves. The colour charge exists in three different states commonly denoted as 'red', 'green' and 'blue'. \\
 Regarding the dependence on the distance, the strong force behaves differently than other fundamental forces: the coupling strength increases with rising distance. This is a consequence of the different colour states and the self-coupling property of gluons. It is referred to as \textit{confinement}~\cite{Alkofer:2006fu} and describes the fact that coloured objects can not exist freely. Actually, when separated, coloured objects start to build new coloured particles until only a colour neutral formation is left. Such colourless objects linked by the strong force are named \textit{hadrons}. On the other hand, particles taking part in the strong interaction start to behave quasi-free, \ie the coupling strength is small, when the distance decreases. This feature is known as \textit{asymptotic freedom}~\cite{PhysRevLett.30.1346, PhysRevLett.30.1343}. \\
@@ -129,7 +129,7 @@ A $R$-parity conserving supersymmetric theory provides some elegant solutions to
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
-    \includegraphics[width=0.7\textwidth]{figures/Couplings.jpg}
+    \includegraphics[width=0.65\textwidth]{figures/Couplings.jpg}
   \end{tabular}
   \caption{Comparison of the renormalization group evolution of the couplings $\alpha_{a}^{-1}$ in the SM (dashed lines) and the MSSM (solid lines) including two-loop effects. The masses of the supersymmetric particles in the MSSM are considered as a common threshold changing between 500\gev and 1.5\tev while the strong coupling constant $\alpha_{3}(m_{Z})$ is varied between 0.117 and 0.121. Taken from~\cite{Martin:1997ns}.}
   \label{fig:couplings}
@@ -183,7 +183,7 @@ As in the SM, the gauge eigenstates of the theory are not necessarily equal to t
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{c}
-    \includegraphics[width=0.7\textwidth]{figures/MSSMrun.png}
+    \includegraphics[width=0.65\textwidth]{figures/MSSMrun.png}
   \end{tabular}
   \caption{Evolution of scalar and gaugino mass parameters in the MSSM with mSUGRA boundary conditions imposed at $Q_0 = 2 \times 10^{16}$\gev. The parameter $\mu^2 + m^2_{H_{u}}$ runs negative, provoking electroweak symmetry breaking. Taken from~\cite{Martin:1997ns}.}
   \label{fig:MSSMrun}
@@ -232,9 +232,9 @@ Some example diagrams for the production modes of such processes at parton level
   % \makebox[\linewidth]{
   \begin{minipage}[c]{1.\textwidth}
     \begin{center}
-      \includegraphics[width=0.49\textwidth]{figures/gluino_xsec.pdf}  
-      \includegraphics[width=0.49\textwidth]{figures/squark_xsec.pdf} \\
-      \includegraphics[width=0.49\textwidth]{figures/stop_xsec.pdf}
+      \includegraphics[width=0.495\textwidth]{figures/gluino_xsec.pdf}  
+      \includegraphics[width=0.495\textwidth]{figures/squark_xsec.pdf} \\
+      \includegraphics[width=0.495\textwidth]{figures/stop_xsec.pdf}
     \end{center}
   \end{minipage}
   \caption{SUSY production cross sections of processes $pp \rightarrow \tilde{g}\tilde{g}$ (\textit{top left}), $pp \rightarrow \tilde{q}\tilde{q}$ (\textit{top right}) and $pp \rightarrow \tilde{t}\tilde{t}$ (\textit{bottom}) displayed for different sparticle masses shown as function of the centre of mass energy~\cite{Kramer:2012bx, Borschensky:2014cia}.}
