--- a/Thesis.bib
+++ b/Thesis.bib
@@ -4757,6 +4757,14 @@ author = {R.L. Gl\"uckstern}
   year = "2013"
 }
 
+@misc{CMS-JME-13-004,
+      collaboration = {CMS},
+      title         = "Jet energy calibration in the 8 TeV pp data",
+      journal       = "CMS Physics Analysis Summary",
+      volume        = "CMS-PAS-JME-13-004",
+      note          = "in preparation",
+      year          = "2014",
+}
 
 % --- MC Simulation ---------------------------------------
 @article{bib:MCMethod,
