--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,4 +1,4 @@
 \section*{Abstract}
-The search for signals of new physics processes beyond the standard model of particle physics is one of the main goals of the CMS experiment at the CERN Large Hadron Collider. Since many theories like e.g. supersymmetry involve the production of new coloured particles which feature jets as their experimental signature, it is important to have a good understanding of jet properties in order to allow such searches.\\
-In the first part of this thesis, a measurement of the jet transverse momentum resolution is presented based on the analysis of proton-proton collision data recorded at a center of mass energy of 8~\tev by the CMS experiment. The measurement utilizes the transverse momentum balance of dijet events at particle level. The main focus lies on the determination of the data-to-simulation ratio of the resolution which can be used to derive scale factors in order to correct the resolution in simulated events to match the observed resolution in data.\\
-The second part of the thesis focuses on searches for supersymmetry in final states with jets and missing transverse momentum. First, a search performed on collision data recorded at $\sqrt{s}=8$~\tev is presented which targets mainly signatures sensitive to the production of light squarks and gluinos as well as the production of gluino mediated third generation particles. Here the main focus lies on the estimation of background contributions arising from QCD multijet events. Second, a study based on simulated events at a center of mass energy of 13~\tev is shown investigating different search strategies towards the identification of directly produced top squarks. Utilizing algorithms for the identification of boosted hadronically decaying top quarks arising from the decay of heavy top squarks, a search sensitivity of top squark masses up to 1~\tev is expected for LSP masses less than approximately 200\gev.   
+The search for signals of new physics beyond the standard model of particle physics is one of the main goals of the CMS experiment at the CERN Large Hadron Collider. Since many theories, like for instance supersymmetry, involve the production of new coloured particles which feature jets as their experimental signature, it is important to have a good understanding of jet related properties in order to allow such searches.\\
+In the first part of this thesis, a measurement of the jet transverse momentum resolution is presented based on the analysis of proton-proton collision data recorded at a centre of mass energy of $\sqrt{s}=8$\tev by the CMS experiment. The measurement utilizes the transverse momentum balance of dijet events at particle level. The main focus lies on the determination of the data-to-simulation ratio of the jet transverse-momentum resolution which can be used to correct the jet resolution in simulated events to match the observed one in data.\\
+The second part of the thesis focuses on searches for supersymmetry in final states with jets and missing transverse momentum. First, a search performed on collision data recorded at $\sqrt{s}=8$\tev is presented which targets mainly signatures sensitive to the production of light-flavour squarks and gluinos as well as the production of gluino mediated third generation particles. Here, the main focus lies on the estimation of background contributions arising from QCD multijet events. Second, a study based on simulated events at a centre of mass energy of  $\sqrt{s}=13$\tev is shown investigating different search strategies towards the identification of direct pair production of top squarks. Utilizing algorithms for the identification of boosted hadronically decaying top quarks arising from the decay of heavy top squarks, a search sensitivity of top squark masses up to 1\tev is expected for LSP masses less than approximately 200\gev.   
