--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,5 +1,17 @@
-The current knowledge and understanding of the fundamental constituents of matter and occuring interactions between them are summarized in the well-established standard model (SM) of particle physics. The SM which has been introduced in the early 1970's is to date a very successful theory as it was able to predict new particles in the past and is tested to very high precision. Beyond that there are several other fundamental questions unanswered like the origin of dark matter or the unification of coupling constants at a certain scale. One of such theories which goes beyond the standard model and is supposed to provide a solution to such open problems is \textit{supersymmetry} (SUSY). A short introduction to the phenomenology of the standard model as well as supersymmetry can be found in Chapter 1 of this thesis. \\
-In order to address all such questions about tests of the SM and new theories beyond, the CMS experiment located at the Large Hadron Collider (LHC) at CERN~\footnote{\textit{European Organization for Nuclear Research} near Geneva, Suisse} has been build. It is designed to analyse particle collisions delivered by the LHC and is the experiment in whichs context this thesis has been performed. An overview of the technical setup of the CMS experiment as well as the current status of its' operation is given in Chapter 2. The general introduction to the CMS experiment is followed in Chapter 3 by an introduction to the reconstruction of certain objects recorded in the particle collisions as well as dedicated algorithms to identify specific decay processes, like e.g. decays of top-quarks. \\
-As the name already indicates, the LHC is a hadron collider and thus the predominant objects to be measured in the detector are expected to be jets -- the experimental signature of quarks and gluons. Thus it is very important to have a good understanding of these objects as e.g. a precise knowledge of the jet transverse momentum resolution. This can be measured utilizing events with a momentum balance in the transverse plane, like e.g. $\gamma$ + jet events, $Z$ + jet events or dijet events. A measurement of this quantity using dijet event topologies in data recorded by the CMS experiment at a center-of-mass energy of 8~\tev as well as simulated events is a main topic of this thesis and discussed in detail in Chapter 4. \\
-The detailled knowledge about jets and their resolution can afterwards be exploited in a search for new physics mainly targeting signatures of decays involving supersymmetric particles in events with missing transverse energy and several jets. Such searches are especially sensitive to the production of gluinos and first and second generation squarksin supersymmetric models. The main focus regarding this new physics search lies on the estimation of background contributions arising from mismeaured jets and decays of heavy flavour quarks to the final states of interest. An overview of this analysis which is also based on the full dataset recorded by the CMS experiment at a center-of-mass energy of 8~\tev with special emphasis on the QCD multijet background determination is presented in Chapter 5. \\
-Finally, Chapter 6 summarizes a prospect study for searches for supersymmetry at a center-of-mass energy of 13~\tev which will be most likely the operation energy of the LHC in 2015 when the next running period starts. In this study, it is investigated how the classical approach of the analysis presented in Chapter 5 can be adapted and improved in order to be sensitive not only to gluino and first and second generation squarks but to the direct production of top squarks. Special emphasis lies on the study of specific kinematic variables and the application of jet substructure tools. \\ The thesis ends with a short summary and outlook.  
+The current knowledge and understanding of the fundamental particles and occuring interactions between them are summarized in the standard model (SM) of particle physics. The SM which has been introduced in the early 1970's is to date a very successful theory, as it was able to predict new particles in the past and is tested to very high precision. However, there are several fundamental questions still unanswered, like the origin of dark matter or the unification of coupling constants at a certain scale. One of such theories which goes beyond the standard model and is supposed to provide solutions to such problems is supersymmetry (SUSY).  \\
+In order to address all such questions about tests of the SM and new theories beyond, the CMS experiment located at the Large Hadron Collider (LHC) at CERN\footnote{\textit{European Organization for Nuclear Research} near Geneva, Suisse} has been build. The LHC is currently the most powerful accelerator and provides proton-proton collisions at a centre of mass energy of up to 8\tev to date. The CMS experiment is designed to analyse particle collisions delivered by the LHC and is the experiment in whichs context this thesis has been performed. In fact, several theoretical arguments suggest that natural realisations of supersymmetry exhibit new particles with masses at the order of 1\tev, which is well within the reach of the LHC. \\
+Since the LHC is a hadron collider, particle collisions predominantly involve strong reactions leading to several jets in the detector -- the experimental signature of quarks and gluons. Thus, it is very important to have a good understanding of these objects as e.g. a precise knowledge of the jet transverse momentum resolution. This can be measured utilizing events with a momentum balance in the transverse plane, like $\gamma$ + jet, $Z$ + jet or dijet events. Dijet events are especially suited as they are expected at a high rate and provide a good detector coverage of the measurement. A measurement of the jet transverse-momentum resolution in proton-proton collisions at $\sqrt{s} = 8$\tev is performed within this thesis. In general, it follows the principles of previous analyses, but employs more precise techniques to estimate the respective uncertainties of the measurement. \\
+The detailled knowledge about jets and their resolution can afterwards be exploited in a search for new physics mainly targeting signatures of decays involving supersymmetric particles. This analysis is also based on proton-proton collision data at $\sqrt{s} = 8$\tev and makes use of events with missing transverse energy and several hard jets. Such searches are especially sensitive to the production of gluinos and first and second generation squarks in supersymmetric models. In contrast to previous versions of this analysis, it is now extended to high jet multiplicities in order to be also sensitive to gluino-mediated production of third generation squarks. In this analysis, a key feature is a precise prediction of standard model background contributions. Due to large theoretical uncertainties, especially background events from QCD multijet processes are difficult to model. These arise from mismeasured jets and decays of heavy-flavour quarks. In this thesis, a method to estimate QCD background contributions to all-hadronic SUSY searches is presented and necessary extensions to predict high jet multiplicity events are discussed.  \\
+Since typically exclusion limits on gluino and light-flavour squark masses are found to be $> 1$\tev from the analyses of $\sqrt{s} = 8$\tev data, the focus of SUSY searches moved also towards third generation squarks. The second run period of the LHC starts in 2015 at a centre of mass energy of $\sqrt{s} = 13$\tev and provides ideal conditions to further explore direct production of top squarks up to the TeV mass range. In this thesis, it is investigated how the classical approach of the analysis performed at $\sqrt{s} = 8$\tev can be adapted and improved in order to be sensitive not only to gluino and first and second generation squarks, but also to the direct production of top squarks. Special emphasis is put on the study of several kinematic variables and the application of jet substructure tools. \\ 
+\\
+This thesis is organized as follows:
+\begin{description}
+ \item \textbf{Chapter 2:} A short introduction to the phenomenology of the standard model as well as to supersymmetry is given. Furthermore, current indirect and direct constraints from collider experiments on supersymmetric models are discussed.
+ \item \textbf{Chapter 3:} This chapter provides an overview of the CMS experiment at the LHC including a discussion of data taking at the LHC up to date.
+ \item \textbf{Chapter 4:} The simulation of events using Monte Carlo techniques is introduced.
+ \item \textbf{Chapter 5:} In this chapter, an introduction to the reconstruction of objects recorded in the particle collisions is given. Furthermore, dedicated algorithms to identify specific decay processes, like e.g. decays of top-quarks, are shown.
+ \item \textbf{Chapter 6:} A measurement of the jet transverse-momentum resolution using dijet event topologies is explained. This measurement is performed for \pp collision data at $\sqrt{s} = 8$\tev as well as simulated events.
+ \item \textbf{Chapter 7:} A search for supersymmetry in final states containing several hard jets and missing transverse momentum at $\sqrt{s} = 8$\tev is reviewed. Special emphasis is put on the determination of the QCD multijet background.
+ \item \textbf{Chapter 8:} Prospect studies for a search for top squarks at $\sqrt{s} = 13$\tev are discussed based on simulated events.
+ \item \textbf{Chapter 9:} This chapter provides a short summary of the thesis and main results.
+\end{description}
