--- a/Thesis.tex
+++ b/Thesis.tex
@@ -62,6 +62,8 @@ a4paper
 \usepackage{afterpage}
 \usepackage{verbatim}
 \usepackage{textcomp}
+\usepackage{german}
+\usepackage[latin1]{inputenc}
 
 %\usepackage{setspace}
 %\doublespacing
@@ -70,6 +72,8 @@ a4paper
 
 \hyphenation{Super-sym-me-try}
 \hyphenation{maximum-like-li-hood}
+\hyphenation{vor-ge-stel-lt}
+%\hyphenation{End-zu-stän-den}
 
 \input{definitions.tex}
 
